added chatbot management in admin dashboard

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -29,6 +29,7 @@
     "dashboard": "لوحة التحكم",
     "clients": "العملاء",
     "courses": "الدورات",
+    "chatbots": "الروبوتات الدردشة",
     "settings": "الإعدادات",
     "logout": "تسجيل الخروج",
     "analytics": "التحليلات"
@@ -108,6 +109,31 @@
     "durationInHours": "المدة بالساعات",
     "enrolledStudents": "الطلاب المسجلين",
     "modulesCount": "الوحدات"
+  },
+  "chatbots": {
+    "title": "إدارة الروبوتات الدردشة",
+    "subtitle": "إنشاء وإدارة الروبوتات الدردشة لعملائك",
+    "addChatbot": "إنشاء روبوت دردشة",
+    "chatbotName": "اسم الروبوت الدردشة",
+    "instructions": "التعليمات",
+    "knowledgeSources": "مصادر المعرفة",
+    "client": "العميل",
+    "status": "الحالة",
+    "active": "نشط",
+    "inactive": "غير نشط",
+    "created": "تم الإنشاء",
+    "noChatbotsAvailable": "لم يتم العثور على روبوتات دردشة",
+    "loadingChatbots": "جاري تحميل الروبوتات الدردشة...",
+    "searchChatbots": "البحث في الروبوتات الدردشة...",
+    "filterByClient": "تصفية حسب العميل",
+    "filterByStatus": "تصفية حسب الحالة",
+    "allClients": "جميع العملاء",
+    "allStatus": "جميع الحالات",
+    "uploadFiles": "رفع الملفات (PDF, DOCX, TXT, MD)",
+    "maxFileSize": "الحد الأقصى لحجم الملف: 10MB لكل ملف",
+    "fileUploaded": "تم رفع الملف",
+    "removeFile": "إزالة الملف",
+    "createFirstChatbot": "إنشاء أول روبوت دردشة"
   },
   "settings": {
     "title": "الإعدادات",
