--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -29,6 +29,7 @@
     "dashboard": "Dashboard",
     "clients": "Clients",
     "courses": "Courses",
+    "chatbots": "Chatbots",
     "settings": "Settings",
     "logout": "Logout",
     "analytics": "Analytics"
@@ -108,6 +109,31 @@
     "durationInHours": "Duration in hours",
     "enrolledStudents": "Enrolled Students",
     "modulesCount": "Modules"
+  },
+  "chatbots": {
+    "title": "Chatbot Management",
+    "subtitle": "Create and manage chatbots for your clients",
+    "addChatbot": "Create Chatbot",
+    "chatbotName": "Chatbot Name",
+    "instructions": "Instructions",
+    "knowledgeSources": "Knowledge Sources",
+    "client": "Client",
+    "status": "Status",
+    "active": "Active",
+    "inactive": "Inactive",
+    "created": "Created",
+    "noChatbotsAvailable": "No chatbots found",
+    "loadingChatbots": "Loading chatbots...",
+    "searchChatbots": "Search chatbots...",
+    "filterByClient": "Filter by client",
+    "filterByStatus": "Filter by status",
+    "allClients": "All Clients",
+    "allStatus": "All Status",
+    "uploadFiles": "Upload files (PDF, DOCX, TXT, MD)",
+    "maxFileSize": "Maximum file size: 10MB per file",
+    "fileUploaded": "File uploaded",
+    "removeFile": "Remove file",
+    "createFirstChatbot": "Create Your First Chatbot"
   },
   "settings": {
     "title": "Settings",
