--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -29,6 +29,7 @@
     "dashboard": "डैशबोर्ड",
     "clients": "क्लाइंट्स",
     "courses": "कोर्सेज",
+    "chatbots": "चैटबॉट्स",
     "settings": "सेटिंग्स",
     "logout": "लॉग आउट",
     "analytics": "एनालिटिक्स"
@@ -108,6 +109,31 @@
     "durationInHours": "घंटों में अवधि",
     "enrolledStudents": "नामांकित छात्र",
     "modulesCount": "मॉड्यूल"
+  },
+  "chatbots": {
+    "title": "चैटबॉट प्रबंधन",
+    "subtitle": "अपने क्लाइंट्स के लिए चैटबॉट बनाएं और प्रबंधित करें",
+    "addChatbot": "चैटबॉट बनाएं",
+    "chatbotName": "चैटबॉट का नाम",
+    "instructions": "निर्देश",
+    "knowledgeSources": "ज्ञान स्रोत",
+    "client": "क्लाइंट",
+    "status": "स्थिति",
+    "active": "सक्रिय",
+    "inactive": "निष्क्रिय",
+    "created": "बनाया गया",
+    "noChatbotsAvailable": "कोई चैटबॉट नहीं मिला",
+    "loadingChatbots": "चैटबॉट्स लोड हो रहे हैं...",
+    "searchChatbots": "चैटबॉट्स खोजें...",
+    "filterByClient": "क्लाइंट के अनुसार फिल्टर करें",
+    "filterByStatus": "स्थिति के अनुसार फिल्टर करें",
+    "allClients": "सभी क्लाइंट्स",
+    "allStatus": "सभी स्थिति",
+    "uploadFiles": "फाइलें अपलोड करें (PDF, DOCX, TXT, MD)",
+    "maxFileSize": "अधिकतम फाइल आकार: प्रति फाइल 10MB",
+    "fileUploaded": "फाइल अपलोड की गई",
+    "removeFile": "फाइल हटाएं",
+    "createFirstChatbot": "अपना पहला चैटबॉट बनाएं"
   },
   "settings": {
     "title": "सेटिंग्स",
